2010-10-17  Robert Halley  <halley@nominum.com>

	* dns/tsig.py: Added symbolic constants for the algorithm strings.
	  E.g. you can now say dns.tsig.HMAC_MD5 instead of
	  "HMAC-MD5.SIG-ALG.REG.INT".  Thanks to Cillian Sharkey for
	  suggesting this improvement.

	* dns/tsig.py (get_algorithm): fix hashlib compatibility; thanks to
	  Kevin Chen for the patch.

	* dns/dnssec.py: Added key_id() and make_ds().

	* dns/message.py: message.py needs to import dns.edns since it uses
	  it.

2010-05-04  Bob Halley  <halley@dnspython.org>

	* dns/rrset.py (RRset.__init__): "covers" was not passed to the
	  superclass __init__().  Thanks to Shanmuga Rajan for reporting
	  the problem.

2010-03-10  Bob Halley  <halley@dnspython.org>

	* The TSIG algorithm value was passed to use_tsig() incorrectly
	  in some cases.  Thanks to 'ducciovigolo' for reporting the problem.

2010-01-26  Bob Halley  <halley@dnspython.org>

	* (Version 1.8.0 released)

2010-01-13  Bob Halley  <halley@dnspython.org>

	* dns/dnssec.py: Added RSASHA256 and RSASHA512 codepoints; added
	  other missing codepoints to _algorithm_by_text.

2010-01-12  Bob Halley  <halley@dnspython.org>

	* Escapes in masterfiles now work correctly.  Previously they were
	  only working correctly when the text involved was part of a domain
	  name.

	* dns/tokenizer.py: The tokenizer's get() method now returns Token
	  objects, not (type, text) tuples.

2009-11-13  Bob Halley  <halley@dnspython.org>

	* Support has been added for hmac-sha1, hmac-sha224, hmac-sha256,
	  hmac-sha384 and hmac-sha512.  Thanks to Kevin Chen for a
	  thoughtful, high quality patch.

	* dns/update.py (Update::present): A zero TTL was not added if
	  present() was called with a single rdata, causing _add() to be
	  unhappy.  Thanks to Eugene Kim for reporting the problem and
	  submitting a patch.

	* dns/entropy.py: Use os.urandom() if present.  Don't seed until
	  someone wants randomness.

2009-09-16  Bob Halley  <halley@dnspython.org>
